--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Primary Meta Tags -->
-  <meta name="title" content="MMErroR: A Benchmark for Erroneous Reasoning in Vision-Language Models">
-  <meta name="description" content="MMErroR is a 2,013-sample multimodal benchmark spanning 24 subdomains and six domains that tests VLMs on detecting and classifying erroneous reasoning; Gemini-3.0-Pro reaches 66.47% accuracy.">
+  <meta name="title" content="MMErroR Benchmark">
+  <meta name="description" content="MMErroR is a 2,013-sample multimodal benchmark spanning 24 subdomains and six domains that tests VLMs on detecting and classifying erroneous reasoning.">
   <meta name="keywords" content="MMErroR, erroneous reasoning, vision-language models, multimodal benchmark, error detection, error classification, hallucination diagnosis, VLM evaluation, reasoning robustness">
   <meta name="author" content="Yang Shi, Yifeng Xie, Minzhe Guo, Liangsi Lu, Mingxuan Huang, Jingchao Wang, Zhihong Zhu, Boyan Xu, Zhiqi Huang">
   <meta name="robots" content="index, follow">
@@ -64,7 +64,7 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
 
-  <title>MMErroR: A Benchmark for Erroneous Reasoning in Vision-Language Models | Project Page</title>
+  <title>MMErroR Benchmark</title>
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
