--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <meta name="citation_author" content="Zhu, Zhihong">
   <meta name="citation_author" content="Xu, Boyan">
   <meta name="citation_author" content="Huang, Zhiqi">
-  <meta name="citation_pdf_url" content="https://mmerror-benchmark.github.io/static/pdfs/mmerror.pdf">
+  <meta name="citation_pdf_url" content="https://arxiv.org/pdf/2601.03331.pdf">
   
   <!-- Additional SEO -->
   <meta name="theme-color" content="#2563eb">
@@ -309,11 +309,11 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="#" target="_self" class="external-link button is-normal is-rounded is-dark" aria-disabled="true" onclick="return false;">
+                  <a href="https://arxiv.org/abs/2601.03331" target="_blank" class="external-link button is-normal is-rounded is-dark" rel="noopener noreferrer">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>arXiv</span>
                 </a>
               </span>
 
@@ -513,8 +513,8 @@
 <section class="hero is-small is-light" id="poster">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Paper</h2>
-      <iframe  src="static/pdfs/mmerror.pdf" width="100%" height="550">
+      <h2 class="title">arXiv</h2>
+      <iframe  src="https://arxiv.org/pdf/2601.03331.pdf" width="100%" height="550">
       </iframe>
     </div>
   </div>
